# gmap

./: .SRCINFO  .gitignore  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: cache.rs  churn.rs  cli.rs  error.rs  export.rs  heat.rs  lib.rs  main.rs  model.rs  util.rs
src/git/: mod.rs  repo.rs
src/heat/: aggregate.rs  commit.rs  exec.rs  fetch.rs  mod.rs  output.rs
src/tui/: draw.rs  events.rs  input.rs  layout.rs  mod.rs  run.rs  state.rs  views.rs
src/tui/events/: actions.rs  input_modes.rs
src/tui/views/: commits.rs  dashboard.rs  file_modal.rs  files.rs  heatmap.rs  help.rs  mod.rs  statistics.rs  timeline.rs
tests/: cli_smoke.rs
