[package]
name = "gmap"
version = "0.3.3"
edition = "2021"
authors = ["seeyebe"]
description = "Git repository analysis tool for churn and heatmap visualization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sseeyebe/gmap"
readme = "README.md"
keywords = ["git", "analysis", "churn", "heatmap", "cli"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
gix = { version = "0.73.0", features = ["worktree-mutation"] }
rusqlite = { version = "0.36.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
indicatif = "0.17"
console = "0.15"
ratatui = "0.26"
crossterm = "0.27"
arboard = "3"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"